--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,11 @@
             </div>
 
             <form class="search-form">
-              <input type="text" class="search-input" placeholder="Search something?"/>
+              <input
+                type="text"
+                class="search-input"
+                placeholder="Search something?"
+              />
               <button class="search-button">Search</button>
             </form>
           </nav>
@@ -233,12 +237,7 @@
                   />
 
                   <p class="tab-text" id="web-design-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Excepteur sint occaecat cupidatat non proident, sunt
-                    smod tempor incididunt ut labore et dolore magna aliqua.
-                    Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.
+                    Наполнение первой вкладки.
                   </p>
                 </div>
 
