--- a/public/index.html
+++ b/public/index.html
@@ -237,7 +237,7 @@
                   />
 
                   <p class="tab-text" id="web-design-text">
-                    Наполнение первой вкладки.
+                    Тестовый текст. Наполнение первой вкладки.
                   </p>
                 </div>
 
@@ -248,12 +248,7 @@
                   />
 
                   <p class="tab-text" id="graphic-design-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Exceptedatat non proident, sunt in culpa qui officia
-                    deserunt mincididunt ut labore et dolore magna aliqua.
-                    Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.
+                    Тестовый текст. Наполнение второй вкладки.
                   </p>
                 </div>
 
@@ -264,12 +259,7 @@
                   />
 
                   <p class="tab-text" id="online-support-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    ollit anim id est laborum. Lorem ipsum dolor sit amet,mollit
-                    anim id est laborum. Deserunt mollit anim id est laborum.
-                    Lorem ipsum dolor sit amet, consectetur adint in culpa qui
-                    officia deserunt mollit anim id est laborum.
+                    Тестовый текст. Наполнение третей вкладки.
                   </p>
                 </div>
 
@@ -280,16 +270,7 @@
                   />
 
                   <p class="tab-text" id="app-design-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Excepteur sint occaecat cupidatat non proident, sunt
-                    in culpa qui officia deserunt mollit anim id est laborum.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    laborum. Lorem ipsum dolor sit amet, consectetur adip
-                    isicing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore magna aliqua. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id
-                    est laborum.
+                    Тестовый текст. Наполнение четвертой вкладки.
                   </p>
                 </div>
 
@@ -300,15 +281,7 @@
                   />
 
                   <p class="tab-text" id="online-marketing-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Excepteur sint occaecat cupidatat non proident, sunt
-                    in culpa qui officia deserunt mollit anim id est laborum.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Excepteur sint occaecat cupidatat non proident, sunt
-                    in culpa qui officia deserunt mollit anim id est laborum.
-                    cia deserunt mollit anim id est laborum.
+                    Тестовый текст. Наполнение пятой вкладки.
                   </p>
                 </div>
 
@@ -319,12 +292,7 @@
                   />
 
                   <p class="tab-text" id="seo-service-text">
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Excepteur sint occaecat cupidatat non proident, sunt
-                    in culpa qui officia deserunt mollit anim id est laborum.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,a
-                    aliqua. Excepteur sint occaecat cupidatat non proident, sunt
-                    in culpa qui officia deserunt mollit anim id est laborum.
+                    Тестовый текст. Наполнение шестой вкладки.
                   </p>
                 </div>
               </div>
