--- a/public/index.html
+++ b/public/index.html
@@ -309,7 +309,7 @@
 
               <p class="buy__install-text">
                 Smooth reliable, responsive ready, perfect portfolio, unique
-                blog layout and many many options for you
+                blog layout and many many options for you.
               </p>
 
               <a href="#" class="button button-purchase button-buy"
