--- a/public/index.html
+++ b/public/index.html
@@ -237,7 +237,7 @@
                   />
 
                   <p class="tab-text" id="web-design-text">
-                    Тестовый текст. Наполнение первой вкладки.
+                    Наполнение первой вкладки.
                   </p>
                 </div>
 
@@ -248,7 +248,7 @@
                   />
 
                   <p class="tab-text" id="graphic-design-text">
-                    Тестовый текст. Наполнение второй вкладки.
+                    Наполнение второй вкладки.
                   </p>
                 </div>
 
@@ -259,7 +259,7 @@
                   />
 
                   <p class="tab-text" id="online-support-text">
-                    Тестовый текст. Наполнение третей вкладки.
+                    Наполнение третей вкладки.
                   </p>
                 </div>
 
@@ -270,7 +270,7 @@
                   />
 
                   <p class="tab-text" id="app-design-text">
-                    Тестовый текст. Наполнение четвертой вкладки.
+                    Наполнение четвертой вкладки.
                   </p>
                 </div>
 
@@ -281,7 +281,7 @@
                   />
 
                   <p class="tab-text" id="online-marketing-text">
-                    Тестовый текст. Наполнение пятой вкладки.
+                    Наполнение пятой вкладки.
                   </p>
                 </div>
 
@@ -292,7 +292,7 @@
                   />
 
                   <p class="tab-text" id="seo-service-text">
-                    Тестовый текст. Наполнение шестой вкладки.
+                    Наполнение шестой вкладки.
                   </p>
                 </div>
               </div>
@@ -309,7 +309,7 @@
 
               <p class="buy__install-text">
                 Smooth reliable, responsive ready, perfect portfolio, unique
-                blog layout and many many options for you.
+                blog layout and many many options for you
               </p>
 
               <a href="#" class="button button-purchase button-buy"
