--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
               />
             </div>
 
-            <p class="square-title">Different theme option"</p>
+            <p class="square-title">Different theme option</p>
           </a>
 
           <a href="#" class="square customize">
