fix after feedback

--- a/public/index.html
+++ b/public/index.html
@@ -109,10 +109,10 @@
             <p class="create-text">Just Buy And Enjoy These Awesome Features</p>
 
             <div class="buttons">
-              <a href="#" class="button button-explore"
+              <a href="#!" class="button button-explore"
                 ><p class="explore">EXPLORE NOW</p></a
               >
-              <a href="#" class="button button-purchase"
+              <a href="#!" class="button button-purchase"
                 ><p class="purchase">purchase now</p></a
               >
             </div>
@@ -120,7 +120,7 @@
         </section>
 
         <section class="squares">
-          <a href="#" class="square option">
+          <a href="#!" class="square option">
             <div class="squares__image-wrapper">
               <img
                 src="./assets/icons/theme.png"
@@ -131,7 +131,7 @@
             <p class="square-title">Different theme option</p>
           </a>
 
-          <a href="#" class="square customize">
+          <a href="#!" class="square customize">
             <div class="squares__image-wrapper">
               <img
                 src="./assets/icons/brilliant.png"
@@ -142,7 +142,7 @@
             <p class="square-title">fully customizable</p>
           </a>
 
-          <a href="#" class="square support">
+          <a href="#!" class="square support">
             <div class="squares__image-wrapper">
               <img src="./assets/icons/bulb.png" alt="unlimited support" />
             </div>
@@ -150,7 +150,7 @@
             <p class="square-title">unlimited support</p>
           </a>
 
-          <a href="#" class="square device">
+          <a href="#!" class="square device">
             <div class="squares__image-wrapper">
               <img
                 src="./assets/icons/devices.png"
@@ -312,7 +312,7 @@
                 blog layout and many many options for you
               </p>
 
-              <a href="#" class="button button-purchase button-buy"
+              <a href="#!" class="button button-purchase button-buy"
                 ><p class="purchase purchase-buy">purchase now</p></a
               >
             </div>
@@ -412,7 +412,7 @@
               <div class="peoples">
                 <p class="peoples-name">victoria bennet</p>
 
-                <p class="peoples-job-title">JS Developer</p>
+                <p class="peoples-job-title">UX Designer</p>
               </div>
 
               <div class="peoples">
@@ -430,7 +430,7 @@
               <div class="peoples">
                 <p class="peoples-name">marta bush</p>
 
-                <p class="peoples-job-title">UI Designer</p>
+                <p class="peoples-job-title">UX Designer</p>
               </div>
             </div>
 
