--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
             <a href="#" class="nav-item">Testimonial</a>
 
             <div class="header__search-icon nav-item">
-              <img src="./assets/icons/search.png" alt="Search" />
+              <!-- <img src="./assets/icons/search.png" alt="Search" /> -->
             </div>
 
             <form class="search-form">
